<resources>
    <string name="app_name">EpiNoish</string>
    <string name="action_settings">Settings</string>
    <string name="input_hint_name">Name</string>
    <string name="input_hint_password">Password</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="modules">My Modules</string>
    <string name="projects">My Projects</string>
    <string name="logout">Logout</string>
    <string name="push_to_logout">Press button to logout</string>
    <string name="planning">Planning</string>
    <string name="marks">Marks</string>
    <string name="trombi">Trombi</string>
    <string name="search">Search</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="module_semester">Semester: </string>
    <string name="module_grade">Grade: </string>

    <string name="marks_titlemodule">Module: </string>
    <string name="marks_title">Projet: </string>
    <string name="marks_marks">Marks: </string>
    <string name="message">Message: </string>

    <string-array name="module_semester_spinner_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="trombi_location">
        <item>Paris/PAR</item>
        <item>Lyon/LYN</item>
        <item>Marseille/MAR</item>
        <item>Bordeaux/BDX</item>
        <item>Lille/LIL</item>
        <item>Montpellier/MPL</item>
        <item>Nancy/NCY</item>
        <item>Nantes/NAN</item>
        <item>Nices/NCE</item>
        <item>Rennes/REN</item>
        <item>Strasbourg/STG</item>
        <item>Toulouse/TLS</item>
    </string-array>

    <string-array name="trombi_year">
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
    </string-array>

    <string name="project_hyphen"> - </string>

    <string name="single_project_token">Tap to validate token</string>
    <string name="single_project_sub">Subscribe</string>

    <string name="single_module_lbl_grade">Grade: </string>
    <string name="single_module_lbl_credits">Credits: </string>
    <string name="single_module_sub">Subscribe</string>

    <string name="planning_lbl_room">Room: </string>
    <string name="planning_hint_token">Token</string>
    <string name="planning_submit_token">Submit token</string>
    <string name="planning_search">Search</string>

    <string name="all_modules_registered">End registration:</string>
    <string name="all_modules_status">Status:</string>
    <string name="all_modules">All Modules</string>

    <string name="all_projects">All Projects</string>

</resources>